# FMQml

./: .clangd  .gitignore  CMakeLists.txt  FMQml-dead-code-removal-plan.md  FMQml-refactoring-plan.md  PRD.md  README.md  STATUS.md  STATUS_2026-05-15.md  cmake_uninstall.cmake.in  fm.desktop  install.sh  megaPartTwo.patch  qml-javascript-to-cpp-migration-plan.md
.github/workflows/: windows-core-build.yml
docs/: Thumbnail loading implementation.md  application-launch-subsystem-plan.md  audio-tag-editor-plugin-ui-plan.md  cleanup-subsystem-plan.md  cleanup-subsystem.patch  epub-preview-quicklook-plan.md  file-panel-interaction-policy-plan.md  hover-preview-card-plan.md  instagram-provider-roadmap.md  knownIssues.md  linux-admin-mode.md  linux-archive-extraction-responsiveness-plan.md  linux-device-integration-plan.md  linux-parity-roadmap.md  linux-portable-device-provider-plan.md  linux-properties-permissions-plan.md  linux-transfer-performance-policy-plan.md  local-file-badge-icons-plan.md  mega-phase5-polish-plan.md  mega-phase6-reliability-plan.md  megaNZplan.md  near-term-work-plan.md  preview-pane-placement-plan.md  provider-batch-operation-labels-plan.md  provider-native-thumbnails-plan.md  provider-properties-overlay-plan.md  provider-transfer-performance-research.md  qa-regression-suite.md  telegram-shared-files-provider-plan.md  temp-cleanup-audit.md  typography-font-settings-plan.md  video-thumbnail-ffmpeg-integration-plan.md
packaging/linux/: io.fmqml.fm.admin.policy.in
qml/: App.qml  Splash.qml
qml/components/: ArchivePasswordDialog.qml  BatchRenameDialog.qml  ChecksumDialog.qml  ColumnPickerMenu.qml  CommandPalette.qml  ConflictDialog.qml  DebugInformationDialog.qml  DeleteConfirmDialog.qml  DiskUsageDialog.qml  DriveContextMenu.qml  DrivePropertiesHero.qml  FavoritesView.qml  FileBriefAdaptiveDelegate.qml  FileBriefDelegate.qml  FileBriefResizeDelegate.qml  FileDelegate.qml  FileGridResizeDelegate.qml  FilePanel.qml  FilePanelHeader.qml  FileSearchDialog.qml  FileTableAdaptiveDelegate.qml  FileTableDelegate.qml  FileTableResizeDelegate.qml  FileWorkspace.qml  FolderCompareDialog.qml  HelpDialog.qml  (+29 more)
scratch/: reproducer.cpp
scripts/: Invoke-QaWatcherMutation.ps1  New-QaSandbox.ps1  audit_temp_files.sh
src/: SplashScreen.cpp  SplashScreen.h  SplashWindow.cpp  SplashWindow.h  main.cpp
tools/winsxs-scan-bench/: CMakeLists.txt  main.cpp
(+489 files in other folders)
